tests/paczka1/fuzzy1/93069257.err
Error in line 4: nEjvw42qi A95 42,6
Error in line 5: nEjvw42qi S808 89,8
Error in line 12: nEjvw42qi A760 65,6
Error in line 23: fTewl1P A95 70,m
Error in line 19: A324 A95 6,3
Error in line 24: A324 S808 81,8
Error in line 32: A324 A95 83,8
Error in line 29: fTewl1P A95 311,7
